deployment/dev/notification/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
  name: api-notifications-internal
  namespace: notifications
spec:
  ingressClassName: nginx
  rules:
  - host: api-notifications.dev.my.cloud
    http:
      paths:
      - backend:
          service:
            name: notifications
            port:
              number: 80
        path: /
        pathType: Prefix
